--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,6 @@
     <com.timchentw.loadingview.LoadingView
         android:id="@+id/loadingView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:loadingText="下載中喔"/>
+        android:layout_height="match_parent"/>
 
 </LinearLayout>
