--- a/loadingview/src/main/res/layout/view_loading.xml
+++ b/loadingview/src/main/res/layout/view_loading.xml
@@ -12,7 +12,7 @@
         android:layout_height="70dp"
         android:layout_centerInParent="true"
         android:src="@drawable/ic_refresh"
-        android:tint="@android:color/darker_gray"
+        android:tint="@color/darker_gray"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
