--- a/loadingview/src/main/res/values/attrs.xml
+++ b/loadingview/src/main/res/values/attrs.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <declare-styleable name = "LoadingView">
-        <attr name = "progressColor" format = "color" />
-        <attr name = "refreshTint" format = "color" />
-        <attr name = "errorText" format = "string" />
-        <attr name = "loadingText" format = "string" />
+    <declare-styleable name = "loading_view">
+        <attr name = "progress_color" format = "color" />
+        <attr name = "refresh_tint" format = "color" />
+        <attr name = "error_text" format = "string" />
+        <attr name = "loading_text" format = "string" />
     </declare-styleable>
 </resources>
